# skillmgr

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
.sisyphus/plans/: skillvault-development-plan.md
.slim/: cartography.json
docs/superpowers/plans/: 2026-05-15-repositories-page.md  2026-05-16-repo-retry-and-edit-enhancement.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: error.rs  main.rs  test_utils.rs
src-tauri/src/config/: base_path.rs  mod.rs
src-tauri/src/db/: config.rs  dispatch.rs  dispatch_template.rs  mod.rs  repository.rs  schema.rs  skill.rs
src-tauri/src/dispatch/: copy.rs  symlink.rs  sync.rs  target_dir.rs
src-tauri/src/git/: auth.rs  clone.rs  mod.rs  pull.rs
src-tauri/src/llm/: client.rs
src-tauri/src/skills/: analyzer.rs  crud.rs  discovery.rs
src/components/: AddRepositoryDialog.tsx
src/components/dispatch/: AddTargetDirDialog.tsx  ApplyTemplateDialog.tsx  CreateTemplateDialog.tsx  DispatchSkillRow.tsx  EditTemplateDialog.tsx
src/components/skills/: DispatchDialog.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  (+5 more)
src/pages/: Dispatch.tsx  Onboarding.tsx  Repositories.tsx  Settings.tsx  Skills.tsx
src/store/: configStore.ts  dispatchStore.ts  repositoryStore.ts  settingsStore.ts
src/test/: smoke.test.tsx
src/types/: config.ts  dispatch.ts  git.ts  llm.ts  repository.ts  skill.ts
(+2 files in other folders)
