[package]
name = "skillvault"
version = "0.1.0"
description = "A Tauri app"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-updater = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
git2 = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[workspace]
members = []
